syntax = "proto3";

package host;
option java_package = "bot.cline.host.proto";
option java_multiple_files = true;

import "cline/common.proto";

// Provides methods for diff views.
service DiffService {
  // Open the diff view/editor.
  rpc openDiff(OpenDiffRequest) returns (OpenDiffResponse);
  // Get the contents of the diff view.
  rpc getDocumentText(GetDocumentTextRequest) returns (GetDocumentTextResponse);
  // Replace a text selection in the diff.
  rpc replaceText(ReplaceTextRequest) returns (ReplaceTextResponse);
  rpc scrollDiff(ScrollDiffRequest) returns (ScrollDiffResponse);
  // Truncate the diff document.
  rpc truncateDocument(TruncateDocumentRequest) returns (TruncateDocumentResponse);
  // Save the diff document.
  rpc saveDocument(SaveDocumentRequest) returns (SaveDocumentResponse);
  // Close the diff editor UI.
  rpc closeDiff(CloseDiffRequest) returns (CloseDiffResponse);
  // Get diagnostics for diff edit analysis.
  rpc getDiagnostics(GetDiagnosticsRequest) returns (GetDiagnosticsResponse);
}

message OpenDiffRequest {
  optional cline.Metadata metadata = 1;
  // The absolute path of the document being edited.
  optional string path = 2;
  // The new content for the file.
  optional string content = 3;
}

message OpenDiffResponse {
  // A unique identifier for the diff view that was opened.
  optional string diff_id = 1;
}

message GetDocumentTextRequest {
  optional cline.Metadata metadata = 1;
  optional string diff_id = 2;
}

message GetDocumentTextResponse {
    optional string content = 1;
}

message ReplaceTextRequest {
  optional cline.Metadata metadata = 1;
  optional string diff_id = 2;
  optional string content = 3;
  optional int32 start_line = 4;
  optional int32 end_line = 5;
}

message ReplaceTextResponse {}

message ScrollDiffRequest {
  optional string diff_id = 1;
  optional int32 line = 2;
}

message ScrollDiffResponse {}

message TruncateDocumentRequest {
  optional cline.Metadata metadata = 1;
  optional string diff_id = 2;
  optional int32 end_line = 3;
}

message TruncateDocumentResponse {}

message CloseDiffRequest {
  optional cline.Metadata metadata = 1;
  optional string diff_id = 2;
}

message CloseDiffResponse {}

message SaveDocumentRequest {
  optional cline.Metadata metadata = 1;
  optional string diff_id = 2;
}

message SaveDocumentResponse {}

message GetDiagnosticsRequest {
  optional cline.Metadata metadata = 1;
}

message GetDiagnosticsResponse {
  repeated FileDiagnostics file_diagnostics = 1;
}

message FileDiagnostics {
  string file_path = 1;
  repeated Diagnostic diagnostics = 2;
}

message Diagnostic {
  string message = 1;
  DiagnosticRange range = 2;
  DiagnosticSeverity severity = 3;
  optional string source = 4;
}

message DiagnosticRange {
  DiagnosticPosition start = 1;
  DiagnosticPosition end = 2;
}

message DiagnosticPosition {
  int32 line = 1;
  int32 character = 2;
}

enum DiagnosticSeverity {
  DIAGNOSTIC_ERROR = 0;
  DIAGNOSTIC_WARNING = 1;
  DIAGNOSTIC_INFORMATION = 2;
  DIAGNOSTIC_HINT = 3;
}
